# affen

./: .gitignore  .pre-commit-config.yaml  README.md  pdm.lock.license  pyproject.toml
affen/: api.py  utils.py
plone_restapi_client/: __init__.py  api.py
tests/: conftest.py  test_items.py  test_session.py  test_utils.py
tests/cassettes/: auth.yaml  test_constructor_authenticates.yaml  test_editing_registry.yaml  test_get_token.yaml  test_iterating_over_folder.yaml  test_login_sets_token.yaml  test_registry_implements_iteration.yaml  test_registry_implements_len.yaml  test_registry_raises_keyerror.yaml  test_registry_raises_notimplementederror.yaml  test_registry_raises_valueerror.yaml  test_registry_update.yaml  test_request_accepts_bytes.yaml  test_wrong_credentials.yaml
tests/cassettes/mixtapes/: restapi_not_installed.yaml
