# SPDX-FileCopyrightText: 2021 Centrum Wiskune en Informatica
#
# SPDX-License-Identifier: MPL-2.0

[project]
name = "Affen"
version = {use_scm = true}
description = "plone.restapi for Humans™"
readme = "README.md"
authors = [
    {name = "Chris Wesseling", email = "Chris.Wesseling@cwi.nl"},
]
dependencies = [
    "requests~=2.26",
]
requires-python = ">=3.7"
dynamic = ["classifiers", "version"]
license = {text = "MPL-2.0"}

[project.urls]
homepage = "https://github.com/CharString/affen"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]

[tool.black]
line-length = 79

[tool.coverage]
[tool.coverage.run]
source = ["affen"]
[tool.coverage.report]
exclude_lines = [
    ".raise_for_status()",
    "if TYPE_CHECKING:",
]

[tool.pdm]
package-dir = "affen"
[tool.pdm.dev-dependencies]
dev = [
    "black~=21.7b0",
    "pre-commit~=2.13",
    "mypy~=0.910",
    "pytest~=6.2",
    "hypothesis~=6.14",
    "types-requests~=2.25",
    "pytest-vcr~=1.0",
    "pytest-cov~=2.12"]
[tool.pdm.scripts]
docker = "tests/conftest.py"
test = "pytest --vcr-record=none"
lint = "pre-commit run --all-files"

