# SPDX-FileCopyrightText: 2021 Centrum Wiskunde en Informatica
#
# SPDX-License-Identifier: MPL-2.0

[project]
name = "affen"
description = "plone.restapi for Humans™"
readme = "README.md"
authors = [
    {name = "Chris Wesseling", email = "Chris.Wesseling@cwi.nl"},
]
dependencies = [
    "requests~=2.26",
]
requires-python = ">=3.7"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Plone",
    "Intended Audience :: Developers",
]
license = {text = "MPL-2.0"}

[project.urls]
homepage = "https://github.com/CharString/affen"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]

[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage]
[tool.coverage.run]
source = ["affen"]
[tool.coverage.report]
exclude_lines = [
    ".raise_for_status()",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"

[tool.pdm]
version = {use_scm = true}
[tool.pdm.dev-dependencies]
dev = [
    "black~=21.7b0",
    "pre-commit~=2.13",
    "mypy @ git+https://github.com/python/mypy.git",  # see python/mypy issue #10633 on GitHub
    "pytest~=6.2",
    "hypothesis~=6.14",
    "types-requests~=2.25",
    "pytest-vcr~=1.0",
    "pytest-cov~=2.12",
    "types-simplejson~=3.17",
]
[tool.pdm.scripts]
docker = "tests/conftest.py"
test = "pytest --vcr-record=none"
lint = "pre-commit run --all-files"
